--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                     <div class="horror-item__book">
                         <picture>
                             <a href="book.html">
-                            <source type="image/webp" srcet="img/book-univer.webp, img/book-univer@2x.webp, img/book-univer@3x.webp 3x">
+                            <source type="image/webp" srcset="img/book-univer.webp, img/book-univer@2x.webp, img/book-univer@3x.webp 3x">
                             <img data-lazy="img/book-univer.png" class="horror-item__book-img" srcset="img/book-univer@2x.png 2x, img/book-univer@3x.png 3x"  alt="Стивен Кинг Институт">
                             
                             </a>
@@ -411,7 +411,7 @@
                     <div class="horror-item__book">
                         <picture>
                             <a href="book.html">
-                            <source type="image/webp" srcet="img/book-it.webp, img/book-it@2x.webp, img/book-it@3x.webp 3x">
+                            <source type="image/webp" srcset="img/book-it.webp, img/book-it@2x.webp, img/book-it@3x.webp 3x">
                             <img data-lazy="img/book-it.png" class="horror-item__book-img" srcset="img/book-it@2x.png 2x, img/book-it@3x.png 3x"  alt="Стивен Кинг Институт">
                             </a>
                         </picture>
@@ -440,7 +440,7 @@
                     </div>
                     <div class="horror-item__book">
                         <picture>
-                            <source type="image/webp" srcet="img/book-madness.webp, img/book-madness@2x.webp, img/book-madness@3x.webp 3x">
+                            <source type="image/webp" srcset="img/book-madness.webp, img/book-madness@2x.webp, img/book-madness@3x.webp 3x">
                             <a href="book.html">
                             <img data-lazy="img/book-madness.png" class="horror-item__book-img" srcset="img/book-madness@2x.png 2x, img/book-madness@3x.png 3x"  alt="Стивен Кинг Институт">
                             </a>
@@ -471,7 +471,7 @@
                     <div class="horror-item__book">
                         <picture>
                             <a href="book.html">
-                            <source type="image/webp" srcet="img/book-dead-zone.webp, img/book-dead-zone@2x.webp, img/book-dead-zone@3x.webp 3x">
+                            <source type="image/webp" srcset="img/book-dead-zone.webp, img/book-dead-zone@2x.webp, img/book-dead-zone@3x.webp 3x">
                             <img data-lazy="img/book-dead-zone.png" class="horror-item__book-img" srcset="img/book-dead-zone@2x.png 2x, img/book-dead-zone@3x.png 3x"  alt="Стивен Кинг Институт">
                             </a>
                         </picture>
@@ -501,7 +501,7 @@
                     <div class="horror-item__book">
                         <picture>
                             <a href="book.html">
-                            <source type="image/webp" srcet="img/book-univer.webp, img/book-univer@2x.webp, img/book-univer@3x.webp 3x">
+                            <source type="image/webp" srcset="img/book-univer.webp, img/book-univer@2x.webp, img/book-univer@3x.webp 3x">
                             <img data-lazy="img/book-univer.png" class="horror-item__book-img" srcset="img/book-univer@2x.png 2x, img/book-univer@3x.png 3x"  alt="Стивен Кинг Институт">
                             </a>
                         </picture>
@@ -531,7 +531,7 @@
                     <div class="horror-item__book">
                         <picture>
                             <a href="book.html">
-                            <source type="image/webp" srcet="img/book-it.webp, img/book-it@2x.webp, img/book-it@3x.webp 3x">
+                            <source type="image/webp" srcset="img/book-it.webp, img/book-it@2x.webp, img/book-it@3x.webp 3x">
                             <img data-lazy="img/book-it.png" class="horror-item__book-img" srcset="img/book-it@2x.png 2x, img/book-it@3x.png 3x"  alt="Стивен Кинг Институт">
                             </a>
                         </picture>
@@ -561,7 +561,7 @@
                     <div class="horror-item__book">
                         <picture>
                             <a href="book.html">
-                            <source type="image/webp" srcet="img/book-madness.webp, img/book-madness@2x.webp, img/book-madness@3x.webp 3x">
+                            <source type="image/webp" srcset="img/book-madness.webp, img/book-madness@2x.webp, img/book-madness@3x.webp 3x">
                             <img data-lazy="img/book-madness.png" class="horror-item__book-img" srcset="img/book-madness@2x.png 2x, img/book-madness@3x.png 3x"  alt="Стивен Кинг Институт">
                             </a>
                         </picture>
@@ -591,7 +591,7 @@
                     <div class="horror-item__book">
                         <picture>
                             <a href="book.html">
-                            <source type="image/webp" srcet="img/book-dead-zone.webp, img/book-dead-zone@2x.webp, img/book-dead-zone@3x.webp 3x">
+                            <source type="image/webp" srcset="img/book-dead-zone.webp, img/book-dead-zone@2x.webp, img/book-dead-zone@3x.webp 3x">
                             <img data-lazy="img/book-dead-zone.png" class="horror-item__book-img" srcset="img/book-dead-zone@2x.png 2x, img/book-dead-zone@3x.png 3x"  alt="Стивен Кинг Институт">
                             </a>
                         </picture>
